[package]
name = "kvs"
version = "0.1.0"
authors = ["Vasanth Gopal <vasanth@rustycraft.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
structopt = "0.3"
serde_json = "1.0.68"
failure = "0.1.8"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
